Progress toward removing all deprecated classes and methods defined in JDK 9 and 10